Mon Jun 30 14:55:51 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/StringProcessor.pm:

          Added a simple fgrep function that will find a string in an array
          reference.

        * modules/ProjectCreator.pm:

          Fixed a bug where custom defines that generate output that can be
          used as automatic input to other custom defines did not work
          properly.  Now, they are automatically added when possible.

Fri Jun 27 12:59:39 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * config/ixml.mpb:
        * config/upnp.mpb:

          Added base projects for use with the open source project Linux SDK
          for UPnP Devices.

        * docs/README:
        * modules/ProjectCreator.pm:

          Split the functionality of the 'automatic' keyword into to two.
          'automatic_in' now specifies that input files are automatically
          added and 'automatic_out' specifies that generated output files
          are automatically added to the project.  These both default to
          true as 'automatic' did.  'automatic' is still accepted, but
          deprecated.

Wed Jun 25 21:38:16 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * docs/README:

          Documented the following changes.

        * modules/ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/WinProjectBase.pm:

          Added the <%cmdsep%> pseudovariable that can be used in prebuild,
          postbuild, and postcommand.  It works like <%and%> and <%or%> but it
          unconditionally runs the right-hand side command.
          For postcommand, added <%input_dirname%> and <%output_dirname%> which
          work like their <%*_basename%> counterparts but return the directory
          portion of the file name.

Thu Jun 19 01:27:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/boost_system.mpb:

          Base project for using the Boost system library.
